# Stock-Price-Simulator

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
data/: test.json
include/: Model.hpp  MonteCarlo.hpp  ParameterEst.hpp  Stock.hpp
python/: datavis.py  get_data.py  requirements.txt  run_simulation.py  test_visualization.py
src/: Model.cpp  ParameterEst.cpp  Stock.cpp  main.cpp  montecarlo_benchmark.cpp  montecarlo_test.cpp  pybindings.cpp
